--- a/Pipfile
+++ b/Pipfile
@@ -9,11 +9,12 @@ spinedb-api = {file = "Spine-Database-API", editable = true}
 scalene = "*"
 tuna = "*"
 yappi = "*"
-pyperf = "*"
 snakeviz = "*"
 pyprof2calltree = "*"
 rich = "*"
 spinetoolbox = {file = "Spine-Toolbox", editable = true}
+python-call-graph = "*"
+pyarrow = "*"
 
 [dev-packages]
 
