--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ rich = "*"
 spinetoolbox = {file = "Spine-Toolbox", editable = true}
 python-call-graph = "*"
 pyarrow = "*"
+adbc-driver-manager = "*"
+adbc-driver-sqlite = "*"
 
 [dev-packages]
 
